setup bower as client side package manager

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
 
 </head>
 <body>
-    <script data-main="config.js" src="require.js"></script>
+    <script data-main="config.js" src="scripts/requirejs/require.js"></script>
 </body>
 </html>
